@@ -1,19 +1,19 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements. See the NOTICE file distributed with this
- * work for additional information regarding copyright ownership. The ASF
- * licenses this file to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance with the License.
+ * Copyright 2019 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ *    http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations under
- * the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.google.cloud.hadoop.fs.gcs.auth;
 
 import static com.google.cloud.hadoop.gcsio.GoogleCloudStorageFileSystem.SCHEME;
@@ -33,10 +33,12 @@ import org.apache.hadoop.security.token.Token;
 public class GcsDtFetcher implements DtFetcher {
 
   /** Returns the service name for GCS, which is also a valid URL prefix. */
+  @Override
   public Text getServiceName() {
     return new Text(SCHEME);
   }
 
+  @Override
   public boolean isTokenRequired() {
     return UserGroupInformation.isSecurityEnabled();
   }
@@ -50,6 +52,7 @@ public class GcsDtFetcher implements DtFetcher {
    * @param url - the URL to which the request is sent
    * @return a Token, or null if fetch fails.
    */
+  @Override
   public Token<?> addDelegationTokens(
       Configuration conf, Credentials creds, String renewer, String url) throws Exception {
     if (!url.startsWith(SCHEME)) {
