@@ -1,19 +1,19 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements. See the NOTICE file distributed with this
- * work for additional information regarding copyright ownership. The ASF
- * licenses this file to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance with the License.
+ * Copyright 2019 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ *    http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations under
- * the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.google.cloud.hadoop.fs.gcs.auth;
 
 import java.io.IOException;
@@ -33,7 +33,8 @@ public class DelegationTokenIOException extends IOException {
   private static final long serialVersionUID = 5431764092856006083L;
 
   public static DelegationTokenIOException wrongTokenType(
-      Class expectedClass, DelegationTokenIdentifier identifier) {
+      Class<? extends DelegationTokenIdentifier> expectedClass,
+      DelegationTokenIdentifier identifier) {
     return new DelegationTokenIOException(
         String.format(
             "Delegation token type is incorrect;"
