@@ -1,26 +1,23 @@
 /*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements. See the NOTICE file distributed with this
- * work for additional information regarding copyright ownership. The ASF
- * licenses this file to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance with the License.
+ * Copyright 2019 Google Inc. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ *    http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations under
- * the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
+
 package com.google.cloud.hadoop.fs.gcs;
 
 import static com.google.cloud.hadoop.fs.gcs.GoogleHadoopFileSystemConfiguration.DELEGATION_TOKEN_BINDING_CLASS;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static com.google.common.truth.Truth.assertWithMessage;
 
 import com.google.cloud.hadoop.fs.gcs.auth.TestDelegationTokenBindingImpl;
 import com.google.cloud.hadoop.fs.gcs.auth.TestTokenIdentifierImpl;
@@ -33,38 +30,43 @@ import org.apache.hadoop.security.token.Token;
 import org.apache.hadoop.security.token.TokenIdentifier;
 import org.apache.hadoop.security.token.delegation.web.DelegationTokenIdentifier;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.JUnit4;
 
+/** Unit tests for GoogleHadoopFileSystemDelegationTokens class. */
+@RunWith(JUnit4.class)
 public class GoogleHadoopFileSystemDelegationTokensTest {
 
   /** Verifies that a configured delegation token binding is correctly loaded and employed */
   @Test
-  public void testDelegationTokenBinding() {
-    final URI initUri = (new Path("gs://" + "test/")).toUri();
-    final Text expectedKind = TestTokenIdentifierImpl.KIND;
+  public void testDelegationTokenBinding() throws IOException {
+    URI initUri = new Path("gs://test/").toUri();
+    Text expectedKind = TestTokenIdentifierImpl.KIND;
 
     GoogleHadoopFileSystem fs = new GoogleHadoopFileSystem();
-    try {
-      fs.initialize(initUri, loadConfig());
+    fs.initialize(initUri, loadConfig());
 
-      // Request a delegation token
-      Token<?> dt = fs.getDelegationToken(null);
-      assertNotNull("Expected a delegation token", dt);
-      assertEquals("Unexpected delegation token service", "gs://test", dt.getService().toString());
-      assertEquals("Unexpected delegation token kind", expectedKind, dt.getKind());
+    // Request a delegation token
+    Token<?> dt = fs.getDelegationToken(null);
+    assertWithMessage("Expected a delegation token").that(dt).isNotNull();
+    assertWithMessage("Unexpected delegation token service")
+        .that(dt.getService().toString())
+        .isEqualTo("gs://test");
+    assertWithMessage("Unexpected delegation token kind")
+        .that(dt.getKind())
+        .isEqualTo(expectedKind);
 
-      // Validate the associated identifier
-      TokenIdentifier decoded = dt.decodeIdentifier();
-      assertNotNull("Failed to decode token identifier", decoded);
-      assertTrue(
-          "Unexpected delegation token identifier type",
-          (decoded instanceof TestTokenIdentifierImpl));
+    // Validate the associated identifier
+    TokenIdentifier decoded = dt.decodeIdentifier();
+    assertWithMessage("Failed to decode token identifier").that(decoded).isNotNull();
+    assertWithMessage("Unexpected delegation token identifier type")
+        .that(decoded)
+        .isInstanceOf(TestTokenIdentifierImpl.class);
 
-      DelegationTokenIdentifier identifier = (DelegationTokenIdentifier) decoded;
-      assertEquals(
-          "Unexpected delegation token identifier kind", expectedKind, identifier.getKind());
-    } catch (IOException e) {
-      fail(e.getMessage());
-    }
+    DelegationTokenIdentifier identifier = (DelegationTokenIdentifier) decoded;
+    assertWithMessage("Unexpected delegation token identifier kind")
+        .that(identifier.getKind())
+        .isEqualTo(expectedKind);
   }
 
   private Configuration loadConfig() {
